Refactored alerts to be API based and not directly generated into the HTML
